<resources>
    <string name="app_name">ALEC</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email Id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Account permissions are needed for login."</string>
    <string name="username_password_not_match">User name and password not matching</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Title-->
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="ip">Ip Address</string>
    <string name="gateway">Gateway</string>
    <string name="subnet">Subnet</string>


    <!--Shared Preferences-->
    <string name="device_info">DeviceInfo</string>

    <string name="sign_in_title">Sign In</string>
    <string name="login_email_title">E-MAIL</string>
    <string name="login_password_title">PASSWORD</string>
    <string name="login_email_hint">Your email</string>
    <string name="login_password_hint">Your password</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="signup_password_title">Don\'t have an account? Signup.</string>
    <string name="title_activity_home">Home</string>

    <string name="action_settings">Settings</string>

    <!--Side Menu Options-->
    <string name="home_option">HOME</string>
    <string name="setting_option">SETTINGS</string>
    <string name="profile_option">PROFILE</string>
    <string name="logout_option">LOGOUT</string>

    <!--Floor Type-->
    <string name="no_floors_message_in_home">Please add your floor plan by clicking on the + icon below.</string>
    <string name="add_button_title">ADD</string>
    <string name="update_button_title">UPDATE</string>
    <string name="cancel_button_title">CANCEL</string>
    <string name="switch_cell_menu_schedule">Schedule</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="add_new_switch_board_button_title">Add new switch board</string>
    <string name="add_more_switches_button_title">Add more switches</string>
    <string name="add_device_title">Add device</string>

    <!--Add Device-->
    <string name="device_id_title">DEVICE ID</string>
    <string name="device_id_hint">Enter Device Id</string>
    <string name="ssid_title">SSID</string>
    <string name="ssid_hint">Enter ssid</string>
    <string name="add_device_password_title">PASSWORD</string>
    <string name="add_device_password_hint">Enter Password</string>
    <string name="switch1_title">SWITCH 1</string>
    <string name="switch2_title">SWITCH 2</string>
    <string name="switch_name_hint">Enter Switch Name</string>
    <string name="switch_type_hint">Enter Switch Type(1/2)</string>
    <string name="add_device_button_title">Add Device</string>
    <string name="connect_to_home_wifi">Connect To Home Wifi</string>
    <string name="available_switchboards_title">Available Switchboards</string>
    <string name="connect_button_title">CONNECT</string>
    <string name="device_setup_dialog_title">CONNECT TO HOME WIFI</string>
    <string name="enter_floor_name">ENTER FLOOR NAME</string>
</resources>
