<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.magnaton.homeautomation.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:minHeight="50dp"
            android:minWidth="50dp"/>

        <TextView
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_gap"
            android:text="@string/sign_in_title"/>

        <TextView
            style="@style/EditTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_gap"
            android:text="@string/login_email_title"/>

        <EditText
            android:id="@+id/email_edit_text"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/micro_gap"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"/>

        <TextView
            style="@style/EditTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_gap"
            android:text="@string/login_password_title"/>

        <EditText
            android:id="@+id/password_edit_text"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/micro_gap"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"/>

        <Button
            android:id="@+id/email_sign_in_button"
            style="@style/SignButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="@dimen/max_gap"
            android:text="@string/sign_in_title"
            />

        <Button
            android:id="@+id/email_forgot_password_button"
            style="@style/ForgotPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_gap"
            android:text="@string/forgot_password_title"
            />

    </LinearLayout>
</RelativeLayout><!--android:paddingBottom="@dimen/activity_vertical_margin"--><!--android:paddingLeft="@dimen/activity_horizontal_margin"--><!--android:paddingRight="@dimen/activity_horizontal_margin"--><!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<AutoCompleteTextView-->
    <!--android:id="@+id/email"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:hint="@string/prompt_email"-->
    <!--android:inputType="textEmailAddress"-->
    <!--android:maxLines="1" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<EditText-->
    <!--android:id="@+id/password"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:hint="@string/prompt_password"-->
    <!--android:imeActionId="@+id/login"-->
    <!--android:imeActionLabel="@string/action_sign_in_short"-->
    <!--android:imeOptions="actionUnspecified"-->
    <!--android:inputType="textPassword"-->
    <!--android:maxLines="1" />-->

    <!--</android.support.design.widget.TextInputLayout>-->