<com.magnaton.homeautomation.Dashboard.LeftNavigationView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/app_side_menu_bg_color">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@mipmap/app_ic_launcher"
                app:civ_border_width="2dp"
                app:civ_border_color="#FFFFFF"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_gap"
                style="@style/UserName"
                android:text="Deepak"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/home_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_gap"
                android:text="@string/home_option"
                style="@style/SideMenuOptionsTextView"
                />

            <TextView
                android:id="@+id/settings_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_gap"
                android:text="@string/setting_option"
                style="@style/SideMenuOptionsTextView"
                />

            <TextView
                android:id="@+id/profile_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_gap"
                android:text="@string/profile_option"
                style="@style/SideMenuOptionsTextView"
                />

            <TextView
                android:id="@+id/logout_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_gap"
                android:text="@string/logout_option"
                style="@style/SideMenuOptionsTextView"
                />
        </LinearLayout>

</com.magnaton.homeautomation.Dashboard.LeftNavigationView>
